cmake_minimum_required(VERSION 3.23.2)

project(ppc_kcufniarb CXX)

if(BRAINFUCK_CPP_COMPILE_TEST)
    add_executable(test_compact test_compact.cpp)
    target_compile_features(test_compact PUBLIC cxx_std_17)
    if(DEFINED BRAINFUCK_CPP_CELL_BITWIDTH)
        if(DEFINED BRAINFUCK_CPP_CELL_IS_SIGNED)
            target_compile_definitions(test_compact PUBLIC BRAINFUCK_CPP_CELL_BITWIDTH=${BRAINFUCK_CPP_CELL_BITWIDTH})
            if(BRAINFUCK_CPP_CELL_IS_SIGNED)
                target_compile_definitions(test_compact PUBLIC BRAINFUCK_CPP_CELL_IS_SIGNED=true)
            else()
                target_compile_definitions(test_compact PUBLIC BRAINFUCK_CPP_CELL_IS_SIGNED=false)
            endif()
        endif()
    endif()
    if(DEFINED BRAINFUCK_CPP_STEP_SLEEP_TIME)
        target_compile_definitions(test_compact PUBLIC BRAINFUCK_CPP_STEP_SLEEP_TIME=${BRAINFUCK_CPP_STEP_SLEEP_TIME})
    endif()
    if(BRAINFUCK_CPP_ENABLE_PRINT_MEMORY)
        target_compile_definitions(test_compact PUBLIC ENABLE_PRINT_MEMORY)
    endif()
    if(BRAINFUCK_CPP_ENABLE_PRINT_CODE)
        target_compile_definitions(test_compact PUBLIC ENABLE_PRINT_CODE)
    endif()
endif()
